# 000AI

./: .aiexclude  .copilotignore  .gitignore  000AI_Copilot_WorkLog.md  README.md  architecture_explanation.md  architecture_refactor_report.md  architecture_refactor_report_v2.md  architecture_refactor_report_v3.md  autonomous_browsing_report.md  bug_diagnosis_report_v10.md  bug_diagnosis_report_v11.md  bug_diagnosis_report_v12.md  bug_diagnosis_report_v13.md  bug_diagnosis_report_v3.md  bug_diagnosis_report_v4.md  bug_diagnosis_report_v5.md  bug_diagnosis_report_v6.md  bug_diagnosis_report_v7.md  bug_diagnosis_report_v8.md  debug_Agent_angel_server.bat.lnk  debug_start.bat.lnk  deployment_refactor_report.md  feature_adjustment_report.md  host_info_temp.json  hot_reload_bugs_report.md  naming_fix_report.md  performance_update_report.md  refactor_report_v2.md  run.bat  server.err  setup.bat.lnk  setup_Agent_angel_server.bat.lnk  start.bat  start_Agent_angel_server.bat.lnk  start_Web_compute_low.bat.lnk  start_client.bat.lnk  start_rust_high_server.bat  start_rust_low_server.bat  start_server.bat.lnk  (+9 more)
Web_compute_low/: Cargo.toml  TEST_copilot_instructions.md  Web_compute_low_build.bat  Web_compute_low_package.bat  Web_compute_low_setup.bat  Web_compute_low_start.bat  app_list.bat  build.sh  debug_gpu_client.bat  index.html  install_rust_task.sh  setup.bat  setup.cpp  setup.sh  start_agent.py  start_client.bat  start_server.bat  start_server.sh  stop_server.bat
Web_compute_low/Debug/: server.rs  simple_server.rs  simulation_comment.py  test_compile.rs
Web_compute_low/Operator/: apps_list.rs
Web_compute_low/Ops/: apps_list.rs
Web_compute_low/ServerCore/: main.rs
Web_compute_low/angel_rocksdb/: IDENTITY  LOG  MANIFEST-000005  数据库归属分析.md
Web_compute_low/js/: debug_helper.js  manifest.json
Web_compute_low/js/apps/: browser.js  intelligence.js  manual.js  performance.js  task_manager.js  (+1 more)
(+841 files in other folders)
