[package]
name = "web_compute_low"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "apps_list"
path = "Operator/apps_list.rs"

[[bin]]
name = "simple_server"
path = "Debug/simple_server.rs"
